--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "codecov": "nyc report -r lcovonly && codecov"
   },
   "dependencies": {
-    "ansi-styles": "^3.2.0",
-    "chalk": "^2.1.0",
+    "turbocolor": "^2.0.1",
     "cross-spawn": "^6.0.4",
     "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
