--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "npm-run-all",
-  "version": "4.1.3",
+  "name": "npm-run-all-v2",
+  "version": "1.0.0",
   "description": "A CLI tool to run multiple npm-scripts in parallel or sequential.",
   "bin": {
     "run-p": "bin/run-p/index.js",
@@ -14,7 +14,7 @@
     "docs"
   ],
   "engines": {
-    "node": ">= 4"
+    "node": ">= 8"
   },
   "scripts": {
     "_mocha": "mocha \"test/*.js\" --compilers js:babel-register --timeout 60000",
@@ -56,7 +56,7 @@
     "rimraf": "^2.6.1",
     "yarn": "^1.2.1"
   },
-  "repository": "mysticatea/npm-run-all",
+  "repository": "antoniokaplan/npm-run-all-v2",
   "keywords": [
     "cli",
     "command",
@@ -70,10 +70,11 @@
     "parallel",
     "task"
   ],
-  "author": "Toru Nagashima",
+  "author": "Antonio Kaplan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mysticatea/npm-run-all/issues"
+    "url": "https://github.com/antoniokaplan/npm-run-all-v2/issues"
   },
-  "homepage": "https://github.com/mysticatea/npm-run-all"
+  "homepage": "https://github.com/antoniokaplan/npm-run-all-v2"
 }
+a57198bd-7343-4e3c-8692-7c98cd8bfd8b
