--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "node": ">= 4"
   },
   "scripts": {
-    "_mocha": "mocha \"test/*.js\" --compilers js:babel-register --timeout 60000",
+    "_mocha": "mocha \"test/*.js\" --timeout 60000",
     "clean": "rimraf .nyc_output coverage jsdoc \"test-workspace/{build,test.txt}\"",
     "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint bin lib scripts test \"test-workspace/tasks/*.js\"",
     "pretest": "node scripts/make-slink.js && npm run lint",
     "preversion": "npm test",
     "postversion": "git push && git push --tags",
-    "test": "nyc npm run _mocha",
-    "watch": "npm run _mocha -- --watch --growl",
+    "test": "nyc --require babel-register npm run _mocha",
+    "watch": "npm run _mocha -- --require babel-register --watch --growl",
     "codecov": "nyc report -r lcovonly && codecov"
   },
   "dependencies": {
-    "ansi-styles": "^3.2.0",
-    "chalk": "^2.1.0",
-    "cross-spawn": "^6.0.4",
+    "ansi-styles": "^3.2.1",
+    "chalk": "^2.4.1",
+    "cross-spawn": "^6.0.5",
     "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
     "read-pkg": "^3.0.0",
@@ -39,21 +39,20 @@
     "string.prototype.padend": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^4.2.20",
+    "@types/node": "^4.9.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-power-assert": "^1.0.0",
+    "babel-preset-power-assert": "^2.0.0",
     "babel-register": "^6.26.0",
-    "codecov": "^2.3.0",
-    "eslint": "^4.5.0",
+    "codecov": "^3.1.0",
+    "eslint": "^4.19.1",
     "eslint-config-mysticatea": "^12.0.0",
-    "fs-extra": "^4.0.2",
-    "jsdoc": "^3.5.4",
-    "mocha": "^3.5.0",
-    "nyc": "^11.1.0",
-    "p-queue": "^2.2.0",
-    "power-assert": "^1.4.4",
-    "rimraf": "^2.6.1",
-    "yarn": "^1.2.1"
+    "fs-extra": "^7.0.1",
+    "mocha": "^5.2.0",
+    "nyc": "^11.9.0",
+    "p-queue": "^2.4.2",
+    "power-assert": "^1.6.1",
+    "rimraf": "^2.6.2",
+    "yarn": "^1.12.3"
   },
   "repository": "mysticatea/npm-run-all",
   "keywords": [
