--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-spawn": "^6.0.5",
     "memorystream": "^0.3.1",
     "minimatch": "^3.0.4",
+    "pidtree": "^0.3.0",
     "read-pkg": "^3.0.0",
     "shell-quote": "^1.6.1",
     "string.prototype.padend": "^3.0.0"
