--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "npm-run-all",
+  "name": "npm-run-all2",
   "version": "4.1.5",
-  "description": "A CLI tool to run multiple npm-scripts in parallel or sequential.",
+  "description": "A CLI tool to run multiple npm-scripts in parallel or sequential. (Maintainence fork)",
   "bin": {
     "run-p": "bin/run-p/index.js",
     "run-s": "bin/run-s/index.js",
@@ -14,7 +14,7 @@
     "docs"
   ],
   "engines": {
-    "node": ">= 4"
+    "node": ">= 10"
   },
   "scripts": {
     "_mocha": "mocha \"test/*.js\" --timeout 120000",
@@ -24,8 +24,8 @@
     "pretest": "node scripts/make-slink.js && npm run lint",
     "preversion": "npm test",
     "postversion": "git push && git push --tags",
-    "test": "nyc --require babel-register npm run _mocha",
-    "watch": "npm run _mocha -- --require babel-register --watch --growl",
+    "test": "nyc npm run _mocha",
+    "watch": "npm run _mocha -- --watch --growl",
     "codecov": "nyc report -r lcovonly && codecov"
   },
   "dependencies": {
@@ -41,9 +41,6 @@
   },
   "devDependencies": {
     "@types/node": "^4.9.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-power-assert": "^3.0.0",
-    "babel-register": "^6.26.0",
     "codecov": "^3.1.0",
     "eslint": "^4.19.1",
     "eslint-config-mysticatea": "^12.0.0",
@@ -55,7 +52,7 @@
     "rimraf": "^2.6.2",
     "yarn": "^1.12.3"
   },
-  "repository": "mysticatea/npm-run-all",
+  "repository": "bcomnes/npm-run-all2",
   "keywords": [
     "cli",
     "command",
@@ -70,9 +67,12 @@
     "task"
   ],
   "author": "Toru Nagashima",
+  "contributors": [
+    "Bret Comnes <bcomnes@gmail.com> (https://bret.io)"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mysticatea/npm-run-all/issues"
+    "url": "https://github.com/bcomnes/npm-run-all2/issues"
   },
-  "homepage": "https://github.com/mysticatea/npm-run-all"
+  "homepage": "https://github.com/bcomnes/npm-run-all2"
 }
