--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: Set git to use LF
-      if: ${{ matrix.os === 'windows-latest' }}
+      if: ${{ matrix.os == 'windows-latest' }}
       run: |
         git config --global core.autocrlf false
         git config --global core.eol lf
