--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "docs": "jsdoc -c jsdoc.json",
     "lint": "eslint bin lib scripts test \"test-workspace/tasks/*.js\"",
     "pretest": "node scripts/make-slink.js && npm run lint",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags",
     "test": "nyc npm run _mocha",
     "watch": "npm run _mocha -- --watch --growl",
     "codecov": "nyc report -r lcovonly && codecov",
@@ -43,17 +41,18 @@
   },
   "devDependencies": {
     "@types/node": "^4.9.1",
+    "auto-changelog": "^2.2.0",
     "codecov": "^3.1.0",
     "eslint": "^4.19.1",
     "eslint-config-mysticatea": "^12.0.0",
     "fs-extra": "^7.0.1",
+    "gh-release": "^4.0.0",
+    "jsdoc": "^3.6.6",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
     "p-queue": "^6.6.1",
     "rimraf": "^2.6.2",
-    "yarn": "^1.12.3",
-    "auto-changelog": "^2.2.0",
-    "gh-release": "^4.0.0"
+    "yarn": "^1.12.3"
   },
   "repository": "bcomnes/npm-run-all2",
   "keywords": [
