--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "minimatch": "^3.0.4",
     "pidtree": "^0.5.0",
     "read-pkg": "^5.2.0",
-    "shell-quote": "^1.6.1",
-    "string.prototype.padend": "^3.0.0"
+    "shell-quote": "^1.6.1"
   },
   "devDependencies": {
     "auto-changelog": "^2.2.0",
