--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pretest": "node scripts/make-slink.js && npm run lint",
     "test": "nyc npm run _mocha",
     "watch": "npm run _mocha -- --watch --growl",
+    "lcov": "nyc report -r lcovonly",
     "version": "auto-changelog -p --template keepachangelog auto-changelog --breaking-pattern 'BREAKING CHANGE:' && git add CHANGELOG.md",
     "preversion": "npm test",
     "postversion": "git push --follow-tags && gh-release -y"
