--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,4 @@ jobs:
     - run: npm run lcov
     - uses: codecov/codecov-action@v1
       with:
-        flags: ${{ matrix.os }},${{ matrix.node }}
+        flags: ${{ matrix.os }}-${{ matrix.node }}
