Fix repo field to a valid format

--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "yarn": "^1.12.3"
   },
   "repository": "bcomnes/npm-run-all2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bcomnes/npm-run-all2.git"
+  },
   "keywords": [
     "cli",
     "command",
