--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         # setting a registry enables the NODE_AUTH_TOKEN env variable where we can set an npm token.  REQUIRED
         registry-url: 'https://registry.npmjs.org'
     - run: npm i
+    - run: git status # getting odd dirty repo errors during version debug info
+    - run: git diff
     - name: npm version && npm publish
       uses: bcomnes/npm-bump@v2.0.2
       with:
