--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: '{build}'
 shallow_clone: true
 
 install:
-  - ps: Install-Product node 12.22.0
+  - ps: Install-Product node 12.22.0 x64
   - set CI=true
   - set AVA_APPVEYOR=true
   - node --version
